--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Application.
 APP_NAME=Terrarium
 APP_ENV=local
+# [php artisan key:generate]
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
@@ -11,12 +12,12 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 # Database.
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_CONNECTION=pgsql
+DB_HOST=pgsql
+DB_PORT=5432
 DB_DATABASE=terrarium
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=password
 
 # Common.
 BROADCAST_DRIVER=log
@@ -47,3 +48,7 @@ AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
+
+# JWT [php artisan jwt:secret].
+JWT_SECRET=
+JWT_ALGO=
